--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,5 @@
   <body>
     <h1>learn webpack 11</h1>
     <!-- <img src="./img/image.png" alt="" /> -->
-  <script type="text/javascript" src="./script/main-d73043-bundle.js"></script></body>
+  </body>
 </html>
