--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,7 @@
+<!--
+ * @Author: lcl
+ * @Date: 2025/6/25
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,8 +9,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    <h1>learn webpack 11</h1>
-    <!-- <img src="./img/image.png" alt="" /> -->
-  </body>
+  <body></body>
 </html>
