--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,17 @@
 -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+<!--  -->
+<script type="text/javascript" src="./dll/lodash.js"></script>
+<script type="text/javascript" src="./dll/jquery.js"></script>
+
+<body>
+</body>
+
 </html>
